--- a/config/database.yml
+++ b/config/database.yml
@@ -22,7 +22,7 @@ default: &default
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   host: localhost
   username: postgres
-  password: Mahdi0880552835
+  password: #type your password
 
   
 development:
